Adiciona repository e controller de propostas

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
+# esse nao sobe para o git
 PORT = 5010
 
 MYSQL_HOST = localhost
 MYSQL_USER = root
 MYSQL_PWD = SPubaitarua7
 MYSQL_BD = provapw
+JWT_KEY= autorizado
