--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ PORT = 5010
 MYSQL_HOST = localhost
 MYSQL_USER = root
 MYSQL_PWD = SPubaitarua7
-MYSQL_BD = provapw
+MYSQL_DB = provapw
+
 JWT_KEY= autorizado
