Adicionando checagem de propriedade nos endpoints de produto (PUT e DELETE)

--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ PORT = 5010
 
 MYSQL_HOST = localhost
 MYSQL_USER = root
-MYSQL_PWD = SPubaitarua7
+#MYSQL_PWD = SPubaitarua7
+MYSQL_PWD = root
 MYSQL_DB = provapw
 
 JWT_KEY= autorizado
